--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.8.0
 bcrypt==3.2.2
+certifi==2022.6.15
 cffi==1.15.1
+charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
 dnspython==2.2.1
@@ -17,8 +19,15 @@ Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
 mysqlclient==2.1.1
+numpy==1.23.1
+Pillow==9.2.0
 pycparser==2.21
 PyMySQL==1.0.2
+requests==2.28.1
 SQLAlchemy==1.4.39
+torch==1.12.0
+torchvision==0.13.0
+typing_extensions==4.3.0
+urllib3==1.26.11
 Werkzeug==2.1.2
 WTForms==3.0.1
