디자인 및 챗봇 연동 중

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,10 @@ Flask-Bcrypt==1.0.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
+geographiclib==1.52
+geopy==2.2.0
 greenlet==1.1.2
+haversine==2.6.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
