--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.3
 colorama==0.4.5
 dnspython==2.2.1
 email-validator==1.2.1
+filelock==3.8.0
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
 Flask-Migrate==3.1.0
@@ -16,6 +17,7 @@ geographiclib==1.52
 geopy==2.2.0
 greenlet==1.1.2
 haversine==2.6.0
+huggingface-hub==0.8.1
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -23,21 +25,31 @@ joblib==1.1.0
 Mako==1.2.1
 MarkupSafe==2.1.1
 mysqlclient==2.1.1
+nltk==3.7
 numpy==1.23.1
+packaging==21.3
 pandas==1.4.3
 Pillow==9.2.0
 pycparser==2.21
 PyMySQL==1.0.2
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.2
+PyYAML==6.0
+regex==2022.8.17
 requests==2.28.1
 scikit-learn==1.0.2
 scipy==1.9.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.97
 six==1.16.0
 SQLAlchemy==1.4.39
 threadpoolctl==3.1.0
+tokenizers==0.12.1
 torch==1.12.0
 torchvision==0.13.0
+tqdm==4.64.0
+transformers==4.21.1
 typing_extensions==4.3.0
 urllib3==1.26.11
 Werkzeug==2.1.2
